# mail_serv

./: .gitignore  .travis.yml  README.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
src/main/mail_serv/: __init__.py  arkon.py  command.py  config.py  filer.py  keeper.py  logging.py  maintain.py  process.py  procname.py  profiler.py  remote.py  replicate.py  sieve.py  subscribe.py  support.py  syncer.py  tinker.py  user.py
src/main/mail_serv/etc/: readme.md
src/main/mail_serv/etc/systemd/system/: arkon.service  mail-keeper.service  mail-keeper.timer  mail-syncer.service  opendkim.service  postfix.service  tinc.service  tinc@.service
src/main/mail_serv/etc/sysusers.d/: 01-work.conf  02-service.conf
src/main/mail_serv/etc/tinc/: readme.md
src/main/mail_serv/etc/tinc/mail/: subnet-down  subnet-up  tinc-down  tinc-up
src/main/mail_serv/etc/tinc/mail/conf.d/: readme.md
src/main/mail_serv/etc/tinc/mail/hosts/: readme.md
src/main/mail_serv/etc/tinc/mail/nodes/: readme.md
src/test/mail_serv_test/: __init__.py  arkon_test.py  config_test.py  filer_test.py  procname_test.py  profiler_test.py  sieve_test.py  support_test.py  syncer_test.py  tinker_test.py  user_test.py
src/test/mail_serv_test/etc/dovecot/: dovecot.conf
src/test/mail_serv_test/etc/tinc/mail/: tinc.conf
src/test/mail_serv_test/etc/tinc/mail/hosts/: node  serv_1  serv_2
src/test/mail_serv_test/etc/tinc/mail/nodes/: serv_1  serv_2  serv_3
tool/: github_squash.py  github_squash.sh  release_update.py
