[metadata]

name = mail_serv
version = 0.7.1

requires_python = >=3.8

author = Andrei Pozolotin
author_email = andrei.pozolotin@gmail.com

summary = Mail Service

description_file = readme.md
description_content_type = text/markdown; charset=UTF-8

home_page = https://github.com/random-python/mail_serv

license = Apache-2

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
    

keywords =
    systemd
    dovecot
    postfix
    getmail
    tinc

[files]

[options]    

packages =
    mail_serv
    mail_serv_test
    
package_dir = 
    mail_serv      = src/main/mail_serv
    mail_serv_test = src/test/mail_serv_test

[entry_points]

console_scripts =
# expose services for systemd
    mail_serv_arkon  = mail_serv.arkon:arkon_service
    mail_serv_keeper = mail_serv.keeper:keeper_service
    mail_serv_syncer = mail_serv.syncer:syncer_service
    
[pbr]

warnerrors = True
skip_authors = True
skip_git_sdist = False
skip_changelog = True
